tests/syntax_error/bad_addressof.jou
def foo() -> int*:
    return &1  # Error: the address-of operator '&' can only be used in front of a variable
